# lite-duplicate-finder

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
lite_duplicate_finder/: __init__.py  core.py
tests/: test_lite_duplicate_finder.py
